# APMoE

./: .gitignore  AI_INTEGRATION_GUIDE.md  Face_Age_Prediction_v1_0.ipynb  Fingerprint_Age_Prediction_v1_0.ipynb  Implementation & Testing Report 1 - T21.docx.md  Keystroke_Age_Prediction_v1_0.ipynb  README.md  env.example  example_run_keystrokes_model.py  final_checklist.md  keystrokes_full_pipeline_model.onnx  pyproject.toml
.cursor/plans/: apmoe_framework_implementation_afab9976.plan.md
IKDD/: README.md
IKDD/IKDD/: any_ks&dl_user001_(1).txt  any_ks&dl_user002_(1).txt  any_ks&dl_user002_(2).txt  any_ks&dl_user002_(3).txt  any_ks&dl_user002_(4).txt  any_ks&dl_user002_(5).txt  any_ks&dl_user003_(1).txt  any_ks&dl_user003_(2).txt  any_ks&dl_user003_(3).txt  any_ks&dl_user003_(4).txt  any_ks&dl_user004_(1).txt  any_ks&dl_user004_(2).txt  any_ks&dl_user004_(3).txt  any_ks&dl_user005_(1).txt  any_ks&dl_user006_(1).txt  any_ks&dl_user006_(2).txt  any_ks&dl_user006_(3).txt  any_ks&dl_user007_(1).txt  any_ks&dl_user007_(2).txt  any_ks&dl_user007_(3).txt  any_ks&dl_user008_(1).txt  any_ks&dl_user008_(2).txt  any_ks&dl_user008_(3).txt  any_ks&dl_user009_(1).txt  any_ks&dl_user009_(2).txt  any_ks&dl_user009_(3).txt  any_ks&dl_user009_(4).txt  any_ks&dl_user010_(1).txt  any_ks&dl_user010_(2).txt  any_ks&dl_user010_(3).txt  any_ks&dl_user011_(1).txt  any_ks&dl_user011_(2).txt  any_ks&dl_user011_(3).txt  any_ks&dl_user011_(4).txt  any_ks&dl_user012_(1).txt  any_ks&dl_user012_(2).txt  any_ks&dl_user012_(3).txt  any_ks&dl_user013_(1).txt  any_ks&dl_user013_(2).txt  any_ks&dl_user013_(3).txt  (+493 more)
configs/: default.json  image.json  keystroke.json  llm_remote.json  multimodal.json
docs/: PROJECT-PROPOSAL-EXTRACTED TEXT  developer_experience.md  face_integration.md  keystroke_integration.md  mvp_deliverables.md  remote_expert_endpoints.md  system-design.md  system_architecture.md
docs/dev/: cli.md  configuration.md  index.md  security.md  serving.md  testing.md
scripts/: e2e_resilience.py  load_test.py  load_test_predict.py  test_llm_remote.py
src/apmoe/: __init__.py  __main__.py
tests/: conftest.py
tests/fixtures/: init_project_ext.py
tests/integration/: test_app.py  test_face_e2e.py  test_init_project_extensions.py  test_keystroke_e2e.py  test_module_boundaries.py
tests/unit/: test_aggregation.py  test_aggregation_builtin.py  test_cli.py  test_config.py  test_experts.py  test_image_modality.py  test_lmstudio_expert.py  test_modality.py  test_pipeline.py  test_processing.py  test_registry.py  test_remote_expert.py  test_security.py  test_serving.py  test_types.py
weights/: keystroke_age_expert.onnx
(+176 files in other folders)
