[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apmoe"
version = "0.1.0"
description = "APMoE: Age Prediction using Mixture of Experts — an inference-only, IoC-based Python framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "APMoE Contributors" }]
keywords = ["age-prediction", "mixture-of-experts", "deep-learning", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "click>=8.1",
    "numpy>=1.26",
    "torch>=2.2",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "httpx>=0.27",       # FastAPI TestClient dependency
]

[project.scripts]
apmoe = "apmoe.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/apmoe"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "D", "N", "SIM", "RUF"]
ignore = [
    "D100",  # Missing docstring in public module — handled per-file
    "D104",  # Missing docstring in public package
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# Mypy (static type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["apmoe"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/apmoe"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
